<resources>
    <string name="app_name">TipCalculator</string>

    <string name="check_amount">Check</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="bill_amount">Check</string>
    <string name="tip_amount">Tip</string>
    <string name="grant_total">Total</string>

    <string name="dollar_format">$%1$.02f</string>

    <string name="input_location_name_hint">Enter location</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_load">Load</string>
</resources>
